Added missing description for webappsec

--- a/group-charter.html
+++ b/group-charter.html
@@ -418,6 +418,7 @@
           <dd>This Group may review existing work, as well as the relationship between services on the Web and TV services,
             and identify requirements and potential solutions to ensure that the Web will function well with TV. </dd>
           <dt><a href="https://www.w3.org/2011/webappsec/">Web Applications Security Working Group</a></dt>
+          <dd>This Group develops security and policy mechanisms to improve the security of Web Applications, and enable secure cross-origin communication.</dd>
           <dt><a href="https://www.w3.org/2010/webperf/">Web Performance Working Group</a></dt>
             <dd>Many of their specifications extend Web Platform WG deliverables.</dd>
           <dt><a href="https://www.w3.org/community/wicg/">Web Platform Incubator Community Group</a></dt>
