Fixed HTTP relations

--- a/group-charter.html
+++ b/group-charter.html
@@ -440,7 +440,7 @@
 
             <dt><a title="IETF Home Page" href="http://www.ietf.org/" id="ietf">Internet Engineering Task Force</a></dt>
               <dd>The IETF is responsible for defining robust and secure protocols for Internet functionality. A
-                close relationship with the IETF HTTP group is crucial to ensuring the good design, deployment, and success
+                close relationship with the <a href='https://datatracker.ietf.org/wg/httpbis/documents/'>IETF HTTP work</a> is crucial to ensuring the good design, deployment, and success
                 of protocol-based APIs such as CORS and Web Sockets. This Working Group will rely upon review and parallel
                 progress of associated specifications, and will keep pace with the IETF's HTTP and
                 <a href="http://www.ietf.org/dyn/wg/charter/hybi-charter.html">HyBi</a> groups' work, conditional upon steady
