--- a/group-charter.html
+++ b/group-charter.html
@@ -538,8 +538,7 @@
       </section>
 
       <hr />
-      <address>Philippe Le Hégaret, Team Contact<br>
-        Yves Lafon, Team Contact<br>
+      <address>Yves Lafon, Team Contact<br>
         Xiaoqian Wu, Team Contact<br>
         Adrian Bateman, Chair<br>
         Charles McCathie Nevile, Chair<br>
