HyBi is no longer

--- a/group-charter.html
+++ b/group-charter.html
@@ -439,12 +439,11 @@
 
             <dt><a title="IETF Home Page" href="http://www.ietf.org/" id="ietf">Internet Engineering Task Force</a></dt>
               <dd>The IETF is responsible for defining robust and secure protocols for Internet functionality. A
-                close relationship with the <a href='https://datatracker.ietf.org/wg/httpbis/documents/'>IETF HTTP work</a> is crucial to ensuring the good design, deployment, and success
+                close relationship with the IETF HTTP work is crucial to ensuring the good design, deployment, and success
                 of protocol-based APIs such as CORS and Web Sockets. This Working Group will rely upon review and parallel
-                progress of associated specifications, and will keep pace with the IETF's HTTP and
-                <a href="http://www.ietf.org/dyn/wg/charter/hybi-charter.html">HyBi</a> groups' work, conditional upon steady
+                progress of associated specifications, and will keep pace with the <a href='https://datatracker.ietf.org/wg/httpbis/documents/'>IETF's HTTPbis</a> group' work, conditional upon steady
                 progress. The working group may also liaise with the IETFs Web Security Working Group, either directly or
-                through its liaison with the W3C's Web Applications Security Working Group. </dd>
+                through its liaison with the W3C's Web Application Security Working Group. </dd>
 
             <dt><a href="https://whatwg.org/">WHATWG</a></dt>
               <dd>Some deliverables are derived from specifications originally written at the WHATWG, or for which a version is
