IETF Web Security group is also no longer

--- a/group-charter.html
+++ b/group-charter.html
@@ -442,7 +442,7 @@
                 close relationship with the IETF HTTP work is crucial to ensuring the good design, deployment, and success
                 of protocol-based APIs such as CORS and Web Sockets. This Working Group will rely upon review and parallel
                 progress of associated specifications, and will keep pace with the <a href='https://datatracker.ietf.org/wg/httpbis/documents/'>IETF's HTTPbis</a> group' work, conditional upon steady
-                progress. The working group may also liaise with the IETFs Web Security Working Group, either directly or
+                progress. The working group may also liaise with the IETFs security work, either directly or
                 through its liaison with the W3C's Web Application Security Working Group. </dd>
 
             <dt><a href="https://whatwg.org/">WHATWG</a></dt>
