Took HTML extension note into account

--- a/group-charter.html
+++ b/group-charter.html
@@ -227,7 +227,7 @@
                     The HTML specification should be progressively modularized into separate documents or
                     <a href='http://www.w3.org/TR/html5/introduction.html#extensibility'>extension specifications</a>.
                     Note that many other Working Groups define extensions to HTML. These should be referenced from the
-                    core specification</dd>
+                    <a href='https://w3c.github.io/html-extensions/'>HTML Extension</a> specification</dd>
 
               <dt><a href="https://www.w3.org/TR/2dcontext/">HTML Canvas 2D Context</a></dt>
                 <dd>An API for the 2D Context of the HTML canvas element.</dd>
