Fixed work mode link

--- a/group-charter.html
+++ b/group-charter.html
@@ -460,7 +460,7 @@
 
       <section class="communication">
         <h2 id="communication">Communication</h2>
-        <p>The <a href="https://www.w3.org/WebPlatform/WG/">working mode</a> of the group is described in detail on its wiki.
+        <p>The <a href="https://github.com/w3c/WebPlatformWG/blob/gh-pages/WorkMode.md">working mode</a> of the group is described in detail on its wiki.
           In general the group does not hold plenary teleconferences, but does meet face to face at the TPAC. It may hold
           more meetings, and certain specifications are developed with regular teleconferences. Note the
           <a href="#decisions">Decision Policy</a> below with regards to meetings. </p>
