Minor dots and commas

--- a/group-charter.html
+++ b/group-charter.html
@@ -141,11 +141,11 @@
     <p>The group will be considered successful if it produces</p>
     <ul>
       <li>Stable versions of specifications addressing the work items listed in the
-        <a href="#milestones">Milestones</a> section, with normative conformance requirements for implementation</li>
-      <li>A test suite for each deliverable, sufficiently broad to demonstrate interoperability.</li>
-      <li>Implementation reports for deliverables showing adoption.</li>
+        <a href="#milestones">Milestones</a> section, with normative conformance requirements for implementation,</li>
+      <li>A test suite for each deliverable, sufficiently broad to demonstrate interoperability,</li>
+      <li>and Implementation reports for deliverables showing adoption,</li>
     </ul>
-    <p>Resulting in the ready availability of multiple, independent, interoperable implementations of each deliverable,
+    <p>resulting in the ready availability of multiple, independent, interoperable implementations of each deliverable,
       including in browsers, authoring and validation tools, and usage on the Web.</p>
     <p>If participants from fewer than three distinct browser-engine projects are participating in the group,
       its charter should be re-examined by the W3C.</p>
