Duplicated the browser participation sentence...

--- a/group-charter.html
+++ b/group-charter.html
@@ -454,6 +454,8 @@
         <h2 id="participation">Participation</h2>
         <p>To be successful, the Web Platform Working Group is expected to have 10 or more active participants for its duration,
           and to have the participation of industry leaders in fields relevant to the specifications it produces.</p>
+    <p>If participants from fewer than three distinct browser-engine projects are participating in the group,
+      its charter should be re-examined by the W3C.</p>
         <p>The Chairs, specification Editors and test Facilitators are expected to contribute one to two days per week
          towards the Working Group. There is no minimum requirement for other Participants.</p>
       </section>
