--- a/group-charter.html
+++ b/group-charter.html
@@ -286,8 +286,7 @@
         </dl>
 
         <h4>Potential deliverables</h4>
-        <p>The following deliverables may be developed as Recommendation track documents, if they have had <a href='https://wicg.github.io/admin/intent-to-migrate.html'>sufficient incubation
-          to expect success</a>:</p>
+        <p>The following deliverables may be developed as Recommendation track documents, if there is consensus in the Working Group that <a href='https://wicg.github.io/admin/intent-to-migrate.html'>incubation suggests success</a>:</p>
         <dl>
           <dt><a href="https://w3c.github.io/ime-api/">Input Method (IME) API</a></dt>
            <dd>An API that provides access to a (native) input method editor.</dd>
