Improve WAI ARIA description

--- a/group-charter.html
+++ b/group-charter.html
@@ -381,7 +381,7 @@
           <dt><a href="https://www.w3.org/WAI/APA">Accessible Platform Architectures Working Group</a></dt>
             <dd>This Group ensures W3C specifications provide support for accessibility to people with disabilities.</dd>
           <dt><a href="https://www.w3.org/WAI/ARIA">Accessible Rich Internet Applications Working Group</a></dt>
-            <dd>This Group develops ARIA</dd>
+            <dd>WAI-ARIA, the Accessible Rich Internet Applications Suite, defines a way to make Web content and Web applications more accessible to people with disabilities and is integrated into HTML to improve the accessibility and interoperability of web content and applications.</dd>
           <dt><a href="https://www.w3.org/testing/browser/" id="browser-testing">Browser Testing and Tools Working Group</a></dt>
             <dd>This group's Web Driver specification is of interest to the
 	    Web Platform WG.</dd>
