Added a link to Web Annotation WG charter

--- a/group-charter.html
+++ b/group-charter.html
@@ -295,8 +295,7 @@
            <dd>An API for managing the amount of storage space (short- or long-term) available.</dd>
           <dt id="robust-anchoring"><a href='http://w3c.github.io/findtext/'>FindText API</a></dt>
            <dd>APIs for linking to a document selection, even when the document
-            has changed. This is a joint deliverable with the Web
-            Annotation WG.</dd>
+            has changed. This is a joint deliverable with the <a href='https://www.w3.org/annotation/charter/'>Web Annotation WG</a>.</dd>
           <dt><a href="http://w3c.github.io/webcomponents/spec/imports/">HTML Imports</a></dt>
            <dd>A way to include and reuse HTML documents in another HTML document.</dd>
           <dt><a href="https://wicg.github.io/BackgroundSync/spec/">Web Background Synchronization</a></dt>
