Added a DOM update in 2017

--- a/group-charter.html
+++ b/group-charter.html
@@ -362,6 +362,7 @@
           <li>IndexedDB version 3 First Public Working Draft in Q1 2017</li>
           <li>Web Sockets: Recommendation expected in 2017</li>
 	  <li>DOM Parsing and Serialization: Recommendation expected in 2017</li>
+    <li>DOM update expected in 2017</li>
 	  <li>Web IDL: Recommendation expected in early 2017</li>
 	</ul>
       </section>
