removed FindText API per https://lists.w3.org/Archives/Member/w3c-ac-members/2016JulSep/0063.html

--- a/group-charter.html
+++ b/group-charter.html
@@ -319,9 +319,6 @@
            <dd>Defines an approach for creating packages of files for use on the web.</dd>
           <dt><a href="https://w3c.github.io/quota-api/">Quota Management API</a></dt>
            <dd>An API for managing the amount of storage space (short- or long-term) available.</dd>
-          <dt id="robust-anchoring"><a href='http://w3c.github.io/findtext/'>FindText API</a></dt>
-           <dd>APIs for linking to a document selection, even when the document
-            has changed. This is a joint deliverable with the <a href='https://www.w3.org/annotation/charter/'>Web Annotation WG</a>.</dd>
           <dt><a href="http://w3c.github.io/webcomponents/spec/imports/">HTML Imports</a></dt>
            <dd>A way to include and reuse HTML documents in another HTML document.</dd>
           <dt><a href="https://wicg.github.io/BackgroundSync/spec/">Web Background Synchronization</a></dt>
@@ -553,7 +550,7 @@
           <dt>Removed as deliverables:</dt>
             <dd>Streams; URL; XHR1</dd>
           <dt>Marked as deliverables to be taken up if incubation suggests likely success:</dt>
-            <dd>Background Synchronisation; Filesystem API; FindText API; HTML Import; Input Methods; Packaging; Quota API</dd>
+            <dd>Background Synchronisation; Filesystem API; HTML Import; Input Methods; Packaging; Quota API</dd>
         </dl>
       </section>
 
