removed microdata DOM API per comment received: https://lists.w3.org/Archives/Member/w3c-archive/2016Sep/0550.html

--- a/group-charter.html
+++ b/group-charter.html
@@ -264,7 +264,8 @@
                 <dd>Describing the use of ARIA attributes on HTML elements.</dd>
 
               <dt><a href="https://www.w3.org/TR/microdata/">Microdata</a></dt>
-                <dd>Widely-used attributes on HTML elements to provide metadata, e.g. as Schema.org or Dublin Core.</dd>
+                <dd>Widely-used attributes on HTML elements to provide metadata, e.g. as Schema.org or Dublin Core.<br>
+                    NOTE: The microdata DOM API is out of scope.</dd>
             </dl>
           </dd>
 
