replaced TV by media per Mark Vickers' comment

--- a/group-charter.html
+++ b/group-charter.html
@@ -431,8 +431,8 @@
           <dd>This group may provide advice or review to ensure that Web Platform WG
             deliverables interact correctly in the context of Mobile applications.</dd>
           <dt><a href="https://www.w3.org/2011/webtv/">Web and TV Interest Group</a></dt>
-          <dd>This Group may review existing work, as well as the relationship between services on the Web and TV services,
-            and identify requirements and potential solutions to ensure that the Web will function well with TV. </dd>
+          <dd>This Group may review existing work, as well as the relationship between services on the Web and media services,
+            and identify requirements and potential solutions to ensure that the Web will function well with media. </dd>
           <dt><a href="https://www.w3.org/2011/webappsec/">Web Application Security Working Group</a></dt>
           <dd>This Group develops security and policy mechanisms to improve the security of Web Applications, and enable secure cross-origin communication.</dd>
           <dt><a href="https://www.w3.org/2010/webperf/">Web Performance Working Group</a></dt>
