added explainer on the list of potential deliverables

--- a/group-charter.html
+++ b/group-charter.html
@@ -325,6 +325,7 @@
           <dt><a href="https://wicg.github.io/BackgroundSync/spec/">Web Background Synchronization</a></dt>
            <dd>A specification describing a method that enables Web applications to synchronize data when next online.</dd>
         </dl>
+        <p><em>Note:</em> The list of specifications above were Recommendation Track documents in the previous charter. They are not statements about incubation success, but more example of the incubation process applied to the list of deliverables of the previous charter.</p>
 
         <p>Each specification should detail any known security implications for implementers, Web authors, and end users.</p>
         <p>The Web Platform WG will actively seek security, privacy, internationalization and accessibility review on all
