added IndexDB, fixed (c)

--- a/webplat-wg.html
+++ b/webplat-wg.html
@@ -198,8 +198,8 @@
           href="https://www.w3.org/2008/webapps/wiki/Database">Database
               API page</a>. The following Database APIs are deliverables under this charter:
             <dl>
-              <dt><a href="http://w3c.github.io/IndexedDB/">Indexed Database API (2nd 
-              Edition)</a></dt>
+              <dt><a href="#1321">Indexed Database API (2nd 
+              Edition)</a> - <a href="https://w3c.github.io/IndexDB/">Editor's Copy</a></dt>
               <dd>An API for a database of records holding simple values and hierarchical 
               objects</dd>
             </dl>
@@ -643,6 +643,16 @@
           document or the provisions of any charter and the W3C Process, the W3C Process shall take 
           precedence. </p>
       </section>
+     <section class="detailed-deliverables">
+        <h2 id="detailed-deliverables">Detailed list of Deliverables</h2>
+      <dl>
+      <dt id="1321" class="spec"><a href="https://www.w3.org/TR/IndexedDB-2/" rel="versionof">Indexed Database API 2.0</a>
+          <br>Latest publication: <a href="https://www.w3.org/TR/2017/WD-IndexedDB-2-20170313/">13 March 2017</a></dt>
+      <dd>Reference Draft: <a href="https://www.w3.org/TR/2016/WD-IndexedDB-2-20160818/">https://www.w3.org/TR/2016/WD-IndexedDB-2-20160818/</a><br> associated <a href="https://lists.w3.org/Archives/Member/member-cfe/2016Aug/0003.html"> Call for Exclusion</a> on 18 August 2016 ended on 15 January 2017<br>Produced under Working Group Charter: http://www.w3.org/2015/10/webplatform-charter.html</dd>
+
+      </dl>
+     </section>
+
       <section>
         <h3 id="changes-from-wp1">Changes from the previous charter</h3>
         <p>The major changes from the <a 
@@ -666,7 +676,7 @@
         Charles McCathie Nevile, Chair<br>
         Léonie Watson, Chair</address>
       <p class="copyright"> <a href="https://www.w3.org/Consortium/Legal/ipr-notice#Copyright" 
-      rel="Copyright">Copyright</a>© 2016 <a href="https://www.w3.org/"><abbr
+      rel="Copyright">Copyright</a>© 2017 <a href="https://www.w3.org/"><abbr
             title="World Wide Web Consortium">W3C</abbr></a><sup>®</sup> (<a 
             href="http://www.csail.mit.edu/"><abbr title="Massachusetts Institute of 
             Technology">MIT</abbr></a>,
