Remove interaction domain logo
Domains are dead, long live functions!

--- a/webplat-wg.html
+++ b/webplat-wg.html
@@ -73,9 +73,7 @@
         <li><a href="#about">About this Charter</a></li>
       </ul>
       <p><a href="https://www.w3.org/"><img src="http://www.w3.org/Icons/w3c_home" alt="W3C" 
-      height="48" width="72"></a> <a href="https://www.w3.org/Interaction/"
-          class="domainlogo"><img alt="Interaction Domain" 
-          src="http://www.w3.org/Icons/interaction"></a> </p>
+      height="48" width="72"></a> </p>
       <h1 id="title">[PROPOSED]<br>
         Web Platform Working Group Charter</h1>
       <p class="mission">The mission of the <a href="https://www.w3.org/WebPlatform/WG/">Web 
