more deliverables + specific case of UIEvents

--- a/webplat-wg.html
+++ b/webplat-wg.html
@@ -199,7 +199,7 @@
               API page</a>. The following Database APIs are deliverables under this charter:
             <dl>
               <dt><a href="#1321">Indexed Database API (2nd 
-              Edition)</a> - <a href="https://w3c.github.io/IndexDB/">Editor's Copy</a></dt>
+              Edition)</a> - <a href="https://w3c.github.io/IndexDB/">Editors' Copy</a></dt>
               <dd>An API for a database of records holding simple values and hierarchical 
               objects</dd>
             </dl>
@@ -209,9 +209,9 @@
           document's tree model. These deliverables
             include:
             <dl>
-              <dt id="domcore">An update for <a href="https://www.w3.org/TR/dom/">DOM4</a></dt>
+              <dt id="domcore">An update for <a href="#1357">DOM4</a></dt>
               <dd>DOM defines a platform-neutral model for events and node trees.</dd>
-              <dt id="innerhtml"><a href="https://w3c.github.io/DOM-Parsing/">DOM Parsing and 
+              <dt id="innerhtml"><a href="#952">DOM Parsing and 
               Serialization</a></dt>
               <dd>Parsing markup into a DOM, and serialize for export, an HTML or XML fragment or 
               document.</dd>
@@ -223,11 +223,11 @@
               <dd>A specification to enable authors to support user interaction in Web applications 
               easily without requiring specific
                 hardware, platform, or input methodologies to be in use.</dd>
-              <dt id="ui-events"><a href="https://w3c.github.io/uievents/">UI Events</a></dt>
+              <dt id="ui-events"><a href="#194">UI Events</a> - ><a href="https://w3c.github.io/uievents/">Editors' Copy</a></dt>
               <dd>Events typically implemented by interactive user agents for user interaction such 
               as mouse and keyboard input.</dd>
-              <dt id="dom-l3-code"><a href="https://w3c.github.io/uievents-code/">UIEvents 
-              KeyboardEvent code Values</a></dt>
+              <dt id="dom-l3-code"><a href="#1180">UIEvents 
+              KeyboardEvent code Values</a> - <a href="https://w3c.github.io/uievents-code/">Editors' Copy</a></dt>
               <dd>Identifying the physical key being pressed by the user.</dd>
               <dt id="dom-l3-key"><a href="https://w3c.github.io/uievents-key/">UIEvents 
               KeyboardEvent key Values</a></dt>
@@ -649,6 +649,35 @@
       <dt id="1321" class="spec"><a href="https://www.w3.org/TR/IndexedDB-2/" rel="versionof">Indexed Database API 2.0</a>
           <br>Latest publication: <a href="https://www.w3.org/TR/2017/WD-IndexedDB-2-20170313/">13 March 2017</a></dt>
       <dd>Reference Draft: <a href="https://www.w3.org/TR/2016/WD-IndexedDB-2-20160818/">https://www.w3.org/TR/2016/WD-IndexedDB-2-20160818/</a><br> associated <a href="https://lists.w3.org/Archives/Member/member-cfe/2016Aug/0003.html"> Call for Exclusion</a> on 18 August 2016 ended on 15 January 2017<br>Produced under Working Group Charter: http://www.w3.org/2015/10/webplatform-charter.html</dd>
+
+<dt id=1357 class='spec'><a href='https://www.w3.org/TR/dom41/' rel='versionof'>W3C DOM 4.1</a>
+ <br>Latest publication: <a href='https://www.w3.org/TR/2017/WD-dom41-20170420/'>20 April 2017</a></dt>
+<dd>Reference Draft:
+<a href='https://www.w3.org/TR/2017/WD-dom41-20170321/'>https://www.w3.org/TR/2017/WD-dom41-20170321/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2017Mar/0002.html'> Call for Exclusion</a> on 22 March 2017
+<br><i>Exclusion opportunity will end on 18 August 2017</i><br>Produced under Working Group Charter: http://www.w3.org/2016/11/webplatform-charter.html</dd>
+
+<dt id=952 class='spec'><a href='http://www.w3.org/TR/DOM-Parsing/' rel='versionof'>DOM Parsing and Serialization</a>
+ <br>Latest publication: <a href='http://www.w3.org/TR/2016/WD-DOM-Parsing-20160517/'>17 May 2016</a></dt>
+<dd>Reference Draft:
+<a href='http://www.w3.org/TR/2016/WD-DOM-Parsing-20160517/'>http://www.w3.org/TR/2016/WD-DOM-Parsing-20160517/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2014May/0005.html'> Call for Exclusion</a> on 01 May 2014
+ ended on 30 June 2014<br>Produced under Working Group Charter: http://www.w3.org/2012/webapps/charter/</dd>
+
+<dt id=194 class='spec'><a href='https://www.w3.org/TR/uievents/' rel='versionof'>UI Events</a>
+ <br>Latest publication: <a href='https://www.w3.org/TR/2016/WD-uievents-20160804/'>04 August 2016</a></dt>
+<dd>Reference Draft:
+<a href='http://www.w3.org/TR/2013/WD-uievents-20130725/'>http://www.w3.org/TR/2013/WD-uievents-20130725/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2013Jul/0008.html'> Call for Exclusion</a> on 25 July 2013
+ ended on 22 December 2013<br>Produced under Working Group Charter: http://www.w3.org/2012/webapps/charter/</dd>
+
+dt id=1180 class='spec'><a href='https://www.w3.org/TR/uievents-code/' rel='versionof'>UI Events KeyboardEvent code Values</a>
+ <br>Latest publication: <a href='https://www.w3.org/TR/2016/WD-uievents-code-20161024/'>24 October 2016</a></dt>
+<dd>Reference Draft:
+<a href='http://www.w3.org/TR/2015/WD-uievents-code-20151215/'>http://www.w3.org/TR/2015/WD-uievents-code-20151215/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2014Jun/0005.html'> Call for Exclusion</a> on 12 June 2014
+ ended on 09 November 2014<br>Produced under Working Group Charter: http://www.w3.org/2014/06/webapps-charter.html</dd>
+
 
       </dl>
      </section>
