done until html-aam (where digging information is a bit more tedious

--- a/webplat-wg.html
+++ b/webplat-wg.html
@@ -263,12 +263,12 @@
               <code>execCommand</code>.</dd>
             </dl>
           </dd>
-          <dt id="file-api"><a title="File API" href="https://w3c.github.io/FileAPI/">File 
-          API</a></dt>
+          <dt id="file-api"><a title="File API" href="#751">File 
+          API</a> - <a href="https://w3c.github.io/FileAPI/">Editors' Copy</a></dt>
           <dd>An API that enables Web applications to select file objects and access their data. 
           This replaces the File Upload
             specification.</dd>
-          <dt id="gamepad"><a href="https://w3c.github.io/gamepad/gamepad.html">Gamepad</a></dt>
+          <dt id="gamepad"><a href="#979">Gamepad</a> - <a href="https://w3c.github.io/gamepad/gamepad.html">Editors' Copy</a></dt>
           <dd>APIs that allow Web applications to directly act on gamepad data.</dd>
           <dt><a href="http://www.w3.org/TR/html/">HTML</a></dt>
           <dd>Specifications to define the HTML language, HTML-specific APIs for interacting with 
@@ -277,7 +277,7 @@
             user agents which process HTML
             resources.
             <dl>
-              <dt><a href="https://www.w3.org/TR/html/">HTML</a></dt>
+              <dt><a href="#981">HTML</a></dt>
               <dd>The core language of the World Wide Web: the Hypertext Markup Language (HTML). The 
               HTML specification should be
                 progressively modularized into separate documents or <a 
@@ -705,6 +705,32 @@ associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2014Oct/0002
 <a href='https://www.w3.org/TR/2016/WD-input-events-20160830/'>https://www.w3.org/TR/2016/WD-input-events-20160830/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2016Aug/0006.html'> Call for Exclusion</a> on 30 August 2016
  ended on 27 January 2017<br>Produced under Working Group Charter: http://www.w3.org/2015/10/webplatform-charter.html</dd>
+
+<dt id=751 class='spec'><a href='http://www.w3.org/TR/FileAPI/' rel='versionof'>File API</a>
+ <br>Latest publication: <a href='http://www.w3.org/TR/2015/WD-FileAPI-20150421/'>21 April 2015</a></dt>
+<dd>Reference Draft: 
+<a href='http://www.w3.org/TR/2015/WD-FileAPI-20150421/'>http://www.w3.org/TR/2015/WD-FileAPI-20150421/</a><br>
+
+<dt id=979 class='spec'><a href='https://www.w3.org/TR/gamepad/' rel='versionof'>Gamepad</a>
+ <br>Latest publication: <a href='https://www.w3.org/TR/2017/WD-gamepad-20170125/'>25 January 2017</a></dt>
+<dd>Reference Draft: 
+<a href='http://www.w3.org/TR/2015/WD-gamepad-20151215/'>http://www.w3.org/TR/2015/WD-gamepad-20151215/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2012May/0010.html'> Call for Exclusion</a> on 29 May 2012
+ ended on 26 October 2012<br>Produced under Working Group Charter: http://www.w3.org/2010/webapps/charter/</dd>
+
+<dt id=981 class='spec'><a href='https://www.w3.org/TR/html51/' rel='versionof'>HTML 5.1</a>
+ <br>Latest publication: <a href='https://www.w3.org/TR/2016/REC-html51-20161101/'>01 November 2016</a></dt>
+<dd>Reference Draft: 
+<a href='https://www.w3.org/TR/2016/PR-html51-20160915/'>https://www.w3.org/TR/2016/PR-html51-20160915/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2016Jun/0002.html'> Call for Exclusion</a> on 21 June 2016
+ ended on 20 August 2016<br>Produced under Working Group Charter: http://www.w3.org/2015/10/webplatform-charter.html</dd>
+
+<dt id=1320 class='spec'><a href='https://www.w3.org/TR/html52/' rel='versionof'>HTML 5.2</a>
+ <br>Latest publication: <a href='https://www.w3.org/TR/2017/WD-html52-20170509/'>09 May 2017</a></dt>
+<dd>Reference Draft: 
+<a href='https://www.w3.org/TR/2016/WD-html52-20160818/'>https://www.w3.org/TR/2016/WD-html52-20160818/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2016Aug/0003.html'> Call for Exclusion</a> on 18 August 2016
+ ended on 15 January 2017<br>Produced under Working Group Charter: http://www.w3.org/2015/10/webplatform-charter.html</dd>
 
       </dl>
      </section>
