update charter proposal
fix #139
fix #142
update expected milestones

--- a/webplat-wg.html
+++ b/webplat-wg.html
@@ -430,12 +430,12 @@
         <ul>
           <li>HTML 5.2 Recommendation in Q4 2017</li>
           <li>HTML 5.3 First Public Working Draft in Q3 2017</li>
-          <li>IndexedDB version 2 Candidate Recommendation in Q1 2017</li>
-          <li>IndexedDB version 3 First Public Working Draft in Q1 2017</li>
+          <li>IndexedDB version 2 Candidate Recommendation in Q3 2017</li>
+          <li>IndexedDB version 3 First Public Working Draft in Q3 2017</li>
           <li>Web Sockets: Recommendation expected in 2017</li>
           <li>DOM Parsing and Serialization: Recommendation expected in 2017</li>
-          <li>DOM update expected in 2017</li>
-          <li>Web IDL: Recommendation expected in early 2017</li>
+          <li>DOM 4.1 Recommendation expected in 2017</li>
+          <li>Microdata: Recommendation expected in late 2017</li>
         </ul>
       </section>
       <section class="dependencies">
@@ -542,9 +542,18 @@
               directly or through its liaison with the
               W3C's Web Application Security Working Group. </dd>
             <dt><a href="https://whatwg.org/">WHATWG</a></dt>
-            <dd>Some deliverables are derived from specifications originally written at the WHATWG, 
-            or for which a version is maintained
-              there. The Web Platform Working Group should make an effort to avoid differences 
+            <dd>The Web Platform WG and the WHAT WG both produce versions of the HTML and DOM specifications.
+              The Web Platform WG works on the HTML and DOM specifications for many reasons, including:<ul>
+
+                <li>The specifications are protected under the W3C Patent Policy,
+                  ensuring that HTML and DOM remain royalty free for use by implementors and authors;</li>
+                <li>The specifications are developed with contributions from a broad range of stakeholders
+                  including implementors and authors,
+                  as well as specialists in accessibility, internationalisation, privacy, and security;</li>
+                <li>The specifications are produced by a globally recognised standards organization,
+                  with a governance model that is designed to find consensus
+                  amongst the many diverse constituents of the web platform.</li></ul> 
+              The Web Platform Working Group should make an effort to avoid differences 
               between WHATWG and Web Platform WG
               specifications that harm interoperability on the Web.</dd>
           </dl>
@@ -655,6 +664,10 @@
           <dt>Removed as deliverables:</dt>
           <dd>Service Workers; Background synchronization (transferred to a new WG)</dd>
           <dt>A further 6-month extension of the Working Group</dt>
+          <dt>Updated expected milestones</dt> 
+          <dt>Removed note aspiring to modularisation of HTML</dt>
+           <dd>It's often a useful goal, but pragmatic decisions have shown there is no clearly right answer
+             and the Working Group makes things externally or integrates them on a case-by-case basis.</dd>
         </dl>
       </section>
       <hr>
